# platform-independent-layer

./: CMakeLists.txt  README.md
deploy/win32/lib/Debug/: platform.lib
deploy/win32/lib/Release/: platform.lib
examples/: CMakeLists.txt
examples/example1/: CMakeLists.txt  main.cpp
examples/example2/: CMakeLists.txt  main.cpp
examples/example3/: CMakeLists.txt  main.cpp
examples/example4/: CMakeLists.txt  CustomWindow.cpp  CustomWindow.h  main.cpp
examples/example5/: CMakeLists.txt  main.cpp
examples/example6/: CMakeLists.txt  CustomWindow.cpp  CustomWindow.h  GLDemo.cpp  GLDemo.h  main.cpp
platform/: CMakeLists.txt  PILConfig.h.in  PILFileSystem.h  PILGLUtil.h  PILInclude.h  PILPrerequisites.h  PILRoot.h  PILTime.h  PILWindow.h  PILWindowManager.h  PILWindowSystem.h  config.h.in
platform/linux/: PILFileSystem.cpp  PILTime.cpp  PILWindow.cpp  PILWindowManager.cpp  PILWindowSystem.cpp
platform/win32/: PILFileSystem.cpp  PILGLUtil.cpp  PILRoot.cpp  PILTime.cpp  PILWindow.cpp  PILWindowManager.cpp  PILWindowSystem.cpp
